# AreCELearnedYet

./: .env  .gitignore  Justfile  LOG.md  LOG_EXEC.md  LOG_STRUCTURE.md  export_env.sh  pyproject.toml
dynamic-exp/: dynamic_exp.sh  parse_log_exmaple.py
lecarb/: __init__.py  __main__.py  constants.py  dtypes.py
lecarb/dataset/: dataset.py  gen_dataset.py  manipulate_dataset.py
lecarb/estimator/: bayesnet.py  estimator.py  feedback_kde.py  mhist.py  mysql.py  postgres.py  sample.py  utils.py
lecarb/estimator/colse/: __init__.py  colse.py
lecarb/estimator/colse/_drivers_ref/: default_args.py  dvine_copula_recursive_dynamic_v2.py  error_comp_network.py  residual_model_train.py
lecarb/estimator/colse/_vendor/colse/: cat_transform.py  cdf_base.py  cdf_dataframe.py  cdf_storage.py  column_index.py  column_ordering.py  copula_functions.py  copula_types.py  custom_data_generator.py  data_conversion_params.py  data_path.py  dataset_names.py  df_conversion.py  df_utils.py  divine_copula_dynamic_recursive.py  dtype_conversion.py  model_names.py  (+20 more)
lecarb/estimator/deepdb/: deepdb.py
lecarb/estimator/deepdb/aqp_spn/: aqp_leaves.py  aqp_spn.py  group_by_combination.py
lecarb/estimator/deepdb/data_preparation/: join_data_preparation.py  prepare_single_tables.py
lecarb/estimator/deepdb/ensemble_compilation/: probabilistic_query.py  spn_ensemble.py
lecarb/estimator/mscn/: model.py  mscn.py
lecarb/estimator/naru/: made.py  naru.py
lecarb/workload/: dump_quicksel.py  gen_label.py  gen_workload.py  generator.py  merge_workload.py  workload.py
logs/: all-qerror.txt
(+31 files in other folders)
