[project]
name = "arecelearnedyet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bloom-filter==1.3",
    "cloudpickle==1.2.1",
    "contexttimer==0.3",
    "cython==0.29.21",
    "dask==1.2.0",
    "docopt==0.6",
    "jupyter==1.0.0",
    "jupyterlab==2.1.4",
    "mysql-connector-python==8.0.21",
    "networkx==2.8.8",
    "numpy==1.18.1",
    "pandas==1.0.3",
    "pomegranate==0.13.4",
    "protobuf==3.20.3",
    "psycopg2-binary==2.8.4",
    "pyodbc==4.0.30",
    "pyqt5==5.15.1",
    "python-dotenv==0.13.0",
    "ray==0.8.7",
    "scikit-learn==0.23.0",
    "scipy==1.4.1",
    "seaborn==0.11.0",
    "setuptools>=75.3.2",
    "spflow==0.0.34",
    "sqlparse==0.3.1",
    "tables==3.6.1",
    "toolz==0.9.0",
    "torch==1.5.0",
    "xgboost==1.1.1",
]
